feat: add types for question active status and previous year month
- Created CreateQuestionBodyActiveStatus type for question status (Active, Inactive).
- Added CreateQuestionBodyPreviousYearMonth type for previous year months (January to December).
- Introduced QuestionActiveStatus and QuestionDetailActiveStatus types for question status.
- Added QuestionDetailPreviousYearMonth and QuestionPreviewPreviousYearMonth types with nullable support.
- Implemented UpdateQuestionBodyActiveStatus and UpdateQuestionBodyPreviousYearMonth types for updating questions.
